front-end/src/dashboard.sass
// CENTER CONTAINER
.grid-container
  margin: 10px

.dashboard-card
  position: absolute
  top: 10px
  left: 10px
  right: 10px
  bottom: 10px

.more-button
  position: absolute
  top: 5px
  right: 10px

.dashboard-card-content
  text-align: center

// GRID AND CELL POSITIONS

$toolbar-width: 90px
$toolbar-height: 64px
$toolbar-margin: 30px

$card-width-side-by-side: max(380px, #{calc(35vw - #{$toolbar-width})})
$card-max-width-side-by-side: 550px

$card-width-alone: max(700px, #{calc(50vw - #{$toolbar-width})})
//$card-max-width-alone: 800px


$body-height: calc(100vh - #{$toolbar-height})

$card-height: calc(#{$body-height} - 50px)
$card-max-height: 800px

$card-margin: 12px //horizontal margin
$card-content-margin: 6px //vertical margin

$card-header-height: 64px
$card-header-margin: 10px

.dash-grid
  display: grid
  height: $body-height
  max-height: $body-height
  grid-column-gap: 5px
  grid-template-columns: auto auto auto
  grid-template-rows: auto
  padding-top: 0px
  margin-left: auto
  margin-right: auto

.grid-cell
  height: auto

.summary-cell-display-both
  grid-area: left
  display: block
  order: 1
  width: $card-width-side-by-side

.summary-cell-display-source
  display: none

.summary-cell-display-summary
  grid-area: left
  display: block
  order: 1
  width: $card-width-alone
  //max-width: $card-max-width-alone

.toolbar-cell
  grid-area: toolbar
  order: 2
  width: $toolbar-width

.source-cell-display-both
  grid-area: right
  order: 3
  width: $card-width-side-by-side

.source-cell-display-source
  order: 1
  grid-area: left
  width: $card-width-alone
  //max-width: $card-max-width-alone

.source-cell-display-summary
  display: none

// CARDS
.mat-card
  padding: 0px !important
  width: inherit

.mat-card-content
  margin: $card-margin !important


.mat-card-dynamic-content
  padding-top: $card-content-margin
  padding-bottom: $card-content-margin
  width: inherit
  height: calc(#{$card-height} - #{$card-header-height} - #{$card-header-margin} - #{$card-content-margin * 2})

.scrollable-content
  height: inherit
  overflow: hidden
  overflow-x: hidden
  overflow-y: auto


// HEADER

.card-title
  display: block
  font: (400 22px Roboto, "Helvetica Neue", sans-serif)
  color: rgba(0, 0, 0, 0.87)

.card-subtitle
  display: block
  font: (400 16px Roboto, "Helvetica Neue", sans-serif)
  color: rgba(0, 0, 0, 0.54)

.header-flex
  display: flex
  flex-direction: row
  justify-content: space-between
  align-content: center
  height: 100%
  width: 100%

// PRE editor

.monospace-editor //pre
  tab-size: 4
  padding: 0px

.monospace-editor
  white-space: pre-line
  display: block

.monospace-editor:focus
    outline: 0px solid transparent

.monospace-editor>div
  display: block
  width: 100%

  //background: #eceff1

  //border-bottom-width: 1px
  //border-bottom: solid
  //border-color: #cfd8dc

.monospace-editor>div:nth-child(2n)
  background: #e3f2fd

  //border-bottom-width: 1px
  //border-bottom: solid
  //border-color: #bbdefb

//mat-tab

.mat-tab-group
  height: 100%
  width: inherit

.mat-tab-body-wrapper
  height: 100%

